added sidebar, WIP

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,9 +19,16 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Wishlist React App</title>
+    <style type=text/css>
+        body, html {
+            height: 100%;
+            margin: 0;
+            max-height: 100%;
+        }
+    </style>
 </head>
 <body>
-<div id="root"></div>
+<div id="root" style="height:100%;"></div>
 <!--
   This HTML file is a template.
   If you open it directly in the browser, you will see an empty page.
